# rust-auth-server

./: .gp.md  Cargo.toml  cspell.json
config/: local.json
migrations/: 20240118162209_create_user_table.sql  20240205193224_create_articles_table.sql  20240212141000_subscriptions.sql
src/: application.rs  configuration.rs  db.rs  extractors.rs  lib.rs  main.rs  types.rs
src/domains/: user.rs
src/extractors/: auth.rs  mod.rs  validators.rs
src/middlewares/: auth.rs
src/parsers/: article.rs  format_errors.rs  mod.rs  user.rs  validate_json.rs
src/routes/: mod.rs  root.rs
src/routes/articles/: create_article.rs  get_subscribed.rs  list.rs  mod.rs  subscribe.rs
src/routes/auth/: me.rs  mod.rs  register.rs
src/routes/auth/login/: handler.rs  loader.rs  mod.rs
src/routes/auth/register/: handler.rs  loader.rs  mod.rs
src/utils/: err.rs  jwt.rs  mod.rs  password.rs  response.rs
tests/: helper.rs  main.rs
tests/articles/: create_article.rs  get_subscribed.rs  list_articles.rs  mod.rs  subscribe.rs
tests/auth/: login.rs  register.rs
tests/helper/: app.rs  mod.rs  users.rs
