[package]
name = "auth_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"]}
config = { version = "0.13.1", features = ["json"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "migrate", "uuid" ] }
validator = { version = "0.15", features = ["derive"] }
anyhow = "1.0.79"
thiserror = "1.0.56"
derive_more = "0.99.17"
uuid = { version = "1.7.0", features = ["v4"] }
dotenv = "0.15.0"
argon2 = "0.5.2"

[dev-dependencies]
axum-macros = "0.4.1"
