[package]
name = "auth_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "auth_server_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"]}
config = { version = "0.13.1", features = ["json"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "migrate", "uuid", "chrono" ] }
validator = { version = "0.15", features = ["derive"] }
anyhow = "1.0.79"
thiserror = "1.0.56"
derive_more = "0.99.17"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
dotenv = "0.15.0"
argon2 = "0.5.2"
claims = "0.7.1"
jsonwebtoken = "9.2.0"
maud = { version = "0.26.0", features = ["axum"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "tracing-log"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tower = "0.4.13"
chrono = { version = "0.4.33", features = ["serde"] }
futures = "0.3.30"
parse-display = "0.9.0"
axum-macros = "0.4.1"

[dev-dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
axum-macros = "0.4.1"
